--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-:root{
-  font-size: 62.5%; /* 1rem = 10px*/
-  --primary-color:hsl(192, 100%, 50%);
-  --primary-bg:hsl(192, 100%, 91%);
-  --headline:hsl(210, 11%, 15%);
-  --paragraph: hsl(210, 9%, 31%);
-}
+/* GERAL================================= */
+
+
 
 /*100% == 16px && 62.5% == 10px */
 *{
@@ -13,25 +9,67 @@
   box-sizing: border-box;
 }
 
-img{
+:root{
+  font-size: 62.5%; /* 1rem = 10px*/
+  --primary-color:hsl(192, 100%, 50%);
+  --primary-bg:hsl(192, 100%, 91%);
+  --headline:hsl(210, 11%, 15%);
+  --paragraph: hsl(210, 9%, 31%);
+  --brand-beige: hsl(39, 100%, 97%);
+  --brand-ligth: hsl(148, 23%, 89%);
+  --nav-height: 7.2rem;
+}
+
+html,body{
   width: 100%;
-  display: block;
+  height: 100%;
 }
 
 body{
   font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
   text-align: center;
-  background: var(--primary-bg);
+
+  overflow: overlay;
+ 
 }
 
-header{
-  width: 100%;
+.wrapper{
+  width: 100vw;
   max-width: 37.5rem;
-  margin:auto;
-  margin-top: 4.1rem;
+  margin-inline:auto;
+  padding-inline: 2.4rem;
+}
+
+ul{
+  list-style: none;
+}
 
 
+/* HEADER================================ */
+
+header{
+  margin-top: calc(4.1rem + var(--nav-height));
+}
+
+header::before{
+  content: "";
+  width: 100%;
+  height: calc(95rem + var(--nav-height));
+  background: var(--primary-bg);
+  display: block;
+
+  position: absolute;
+  top:0;
+  left: 0;
+  z-index: -1;
+}
+
+header img{
+  width: 26.4rem;/* mesmo tamanho da div em baixo*/
+  display: block;
+  /* object-position: 0 2rem; */
+  margin-inline: auto;
 }
 
 h4{
@@ -57,11 +95,11 @@ p{
   margin-bottom: 3.2rem;
 }
 
-button{
+header button{
   background: var(--primary-color);
 
   border: none;
-  margin: 0 auto 6rem auto ;
+  margin: 0 auto 6rem auto;
   border-radius: 4rem;
 
   height: 6.2rem;
@@ -80,31 +118,175 @@ button{
   
  
 }
+ 
 
 .box{
-  background: #FFFAF1;
-  margin: 0 2.0rem;
-  border-radius: 0.5rem;
+  width: 32.7rem;
+  padding-block: 4rem;
+
+  margin-inline: auto;
+  background: var(--brand-beige);
+  border: 1px solid var(--brand-ligth);
+  border-radius: .6rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6rem;
 }
+
 .box p{
   margin: 0;
-  font-weight: 400;
-  font-size: 1.6rem;
-  padding-top: 0.4rem;
   color: var(--primary-color);
-}
-.item:nth-child(1){
-  padding-top: 4.0rem;
-}
-.item:nth-child(2){
-  padding: 6.0rem 0;
+  line-height: 150%;
+  font-size: 1.6rem;
+  
 }
 
-.item:last-child{
-  padding-bottom: 4.0rem;
+.box h3{
+ color: var(--headline);
+ font-size: 4.8rem;
+ line-height: 130%;
+ margin-bottom: .4rem;
 }
 
-.item h3{
+
+/* NAV================================ */
+
+nav{
+  display: flex;
+  
+  height:var(--nav-height);
+
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+nav .wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+ 
+}
+
+nav.scroll{
+  background: var(--primary-color);
+  width: 100vw;
+}
+
+
+nav.scroll svg:nth-child(1) path{
+  fill: #fff;
+}
+
+nav.scroll button path{
+  stroke: #fff;
+}
+
+
+nav button{
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+/* MENU-expended================================ */
+
+body.menu-expended{
+  overflow: hidden;
+}
+
+
+/* para todo do primeiro nivel exceto */
+body.menu-expended > :not(nav){
+  display: none;
+}
+
+
+.menu,
+.close-menu,
+body.menu-expended .open-menu{
+  opacity: 0;
+  visibility: hidden;
+}
+body.menu-expended .menu, body.menu-expended  .close-menu{
+  opacity: 1;
+  visibility: visible;
+}
+
+
+body.menu-expended .menu{
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: var(--primary-color);
+
+  width: 100vw;
+  height: 100vh;
+
+  padding-top:var(--nav-height) ;
+}
+
+body.menu-expended nav{
+  position: relative;
+}
+
+.menu ul:nth-child(1){
+  display: flex;
+  flex-direction: column;
+  gap: 4.8rem;
+  margin-top: 6rem;
+
+  font-size: 2.4rem;
   font-weight: 700;
-  font-size: 4.8rem;
+  line-height: 3.1rem;
+}
+
+.menu ul li a{
+  color: #fff;
+  text-decoration: none;
+}
+
+.menu .button{
+  background: #fff;
+  border-radius: 4rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 2.3rem;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  color:var(--primary-color);
+ 
+  padding: 1.6rem 3.2rem;
+  display: inline-block;
+
+  margin-top: 4.8rem;
+  margin-bottom: 8rem;
+ 
+
+
+}
+
+.social-links{
+  display: flex;
+  gap: 3.2rem;
+  align-items: center;
+  justify-content: center;
+
+}
+
+body.menu-expended .logo,body.menu-expended nav button {
+  position: relative;
+  z-index: 100;
+}
+
+body.menu-expended .logo path{
+  fill: #fff;
+}
+
+body.menu-expended button path{
+  stroke: #fff;
 }
