--- a/style.css
+++ b/style.css
@@ -11,14 +11,16 @@
 
 :root{
   font-size: 62.5%; /* 1rem = 10px*/
-  --primary-color:hsl(192, 100%, 50%);
+  --hue:192;
+  --primary-color:hsl(var(--hue), 100%, 50%);
   --primary-bg:hsl(192, 100%, 91%);
   --headline:hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
   --brand-beige: hsl(39, 100%, 97%);
-  --brand-ligth: hsl(148, 23%, 89%);
+  --brand-ligth: hsl(calc(var(--hue) - 22), 23%, 89%); /* 192 170 - 148 */
   --nav-height: 7.2rem;
   --bg-light: hsl(180, 14%, 97%);
+  --brand-dark:hsl(var(--hue), 100%, 25%);
 }
 
 html{
@@ -97,6 +99,70 @@ line-height: 150%;
 color: var(--paragraph);
 }
 
+.button{
+ 
+    background: var(--primary-color);
+  
+    border: none;
+    margin-bottom: 6rem;
+    border-radius: 4rem;
+  
+    padding: 1.6rem 3.2rem;
+    width: fit-content;
+  
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 700;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.6rem;
+  
+    
+  text-decoration: none;
+  transition: background .2s;
+}
+
+.button:hover{
+  background: var(--brand-dark);
+}
+
+.social-links{
+  display: flex;
+  gap: 3.2rem;
+  align-items: center;
+  justify-content: center;
+
+}
+
+/*colors*/
+#services  .card circle{
+  fill: var(--brand-ligth);
+  }
+
+/* selecionar todos com cor especifica */
+#navigation .logo path[fill*="#00ccff"],  
+#backToTopButton circle{
+  fill: var(--primary-color)
+}
+
+body.menu-expended #navigation .logo path,
+#navigation.scroll .logo path{
+  fill: #FFF;
+}
+
+button.open-menu path[stroke*="#00856F"],
+#contact li path{
+  stroke: var(--primary-color);
+}
+
+#navigation.scroll button.open-menu path[stroke*="#00856F"]{
+  stroke: #fff;
+}
+
+ 
 /* NAV================================ */
 
 nav{
@@ -226,12 +292,11 @@ body.menu-expended .menu{
 
 }
 
-.social-links{
-  display: flex;
-  gap: 3.2rem;
-  align-items: center;
-  justify-content: center;
+.menu .button:hover{
+  background: var(--primary-color);
+  color: #FFF;
 
+  filter: brightness(1.2);
 }
 
 body.menu-expended .logo,body.menu-expended nav button {
@@ -269,8 +334,13 @@ body.menu-expended button path{
   z-index: -1;
 }
 
+#home .button{
+  margin-inline: auto;
+}
+
+
 #home img{
-  width: 26.4rem;/* mesmo tamanho da div em baixo*/
+  width: 35.4rem;/* mesmo tamanho da div em baixo*/
   display: block;
   /* object-position: 0 2rem; */
   margin-inline: auto;
@@ -288,29 +358,7 @@ body.menu-expended button path{
   margin-bottom: 3.2rem;
 }
 
-#home button{
-  background: var(--primary-color);
 
-  border: none;
-  margin: 0 auto 6rem auto;
-  border-radius: 4rem;
-
-  height: 6.2rem;
-  width: 26.3rem;
-
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  font-weight: 700;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1.6rem;
-
-  
- 
-}
  
 
 #home .box{
@@ -367,11 +415,12 @@ body.menu-expended button path{
   border-radius: .6rem;
 }
 
+
 #services .card h3{
   margin-block: 1.5rem;
 }
 
-/* ABOUT */
+/* ABOUT=====================================*/
 #about {
   text-align: left;
   background: var(--brand-beige);
@@ -385,3 +434,89 @@ body.menu-expended button path{
   margin-top: 2.4rem;
   margin-bottom: 6rem;
 }
+
+
+
+/* contact================================ */
+
+#contact {
+  text-align: left;
+}
+
+#contact header{
+  margin-bottom: 3.2rem;
+}
+#contact ul{
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+
+  margin-bottom: 3.2rem;
+}
+
+#contact ul li{
+  display: flex;
+  align-items: center;
+  gap: .8rem;
+}
+
+
+
+/* footer================================ */
+
+footer{
+  background: var(--primary-color);
+  padding-block: 6rem;
+
+  text-align: left;
+  color: #fff;
+
+}
+footer .logo {
+  display: inline-block;
+  /*  links 'a' são inline - não aceitam margens etc  */
+  margin-bottom: 2.4rem;
+  
+}
+footer .logo svg{
+  width: 23.6rem;
+  height: 3.1rem;
+}
+
+
+footer .logo path{
+  fill: #fff;
+}
+
+footer p{
+  color: var(--brand-beige);
+  line-height: 2;
+  margin-bottom: 3.2rem;
+}
+
+footer .social-links{
+  justify-content: flex-start;
+}
+
+
+
+/* backToTopButton */
+  #backToTopButton{
+    position: fixed;
+    bottom: 1rem;
+    right: 2.5rem;
+
+    opacity: 0;
+    visibility: hidden;
+
+    transform: translateY(100%);
+    transition: 200ms;
+  }
+
+  #backToTopButton.show{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+
+ 
